# orange

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  AST.cc  AST.h  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  README.md  TODO.md  appveyor.yml  codegen.cc  grammar.txt  lexer.cc  lexer.h  lexer.l  main.cc  main.go  parser.cc  parser.h  parser.y  river.settings.json
lib/analysis/: CMakeLists.txt  README.md
lib/cmd/: CMakeLists.txt  OptionsState.cc  ProgramOptions.cc  StateFlag.cc  args.cc
lib/grove/: ASTNode.cc  AccessExpr.cc  Accessible.cc  ArrayAccessExpr.cc  ArrayValue.cc  BinOpAndOr.cc  BinOpArith.cc  BinOpAssign.cc  BinOpCompare.cc  BinOpExpr.cc  Block.cc  BuildSettings.cc  Builder.cc  CMakeLists.txt  CastExpr.cc  ClassDecl.cc  ClassMethod.cc  CodeBase.cc  CodeLocation.cc  CondBlock.cc  Constructor.cc  CtorCall.cc  DerefExpr.cc  EnumStmt.cc  Error.cc  ExprFactory.cc  Expression.cc  ExpressionCall.cc  ExternFunction.cc  Function.cc  FunctionCall.cc  Genericable.cc  HintProvider.cc  IDReference.cc  IfStmt.cc  IncrementExpr.cc  Library.cc  Loop.cc  LoopTerminator.cc  MainFunction.cc  (+34 more)
lib/libanalysis/: CMakeLists.txt
lib/libast/: ASTNode.cc  AccessExpr.cc  Accessible.cc  ArrayAccessExpr.cc  ArrayValue.cc  BinOpAndOr.cc  BinOpArith.cc  BinOpAssign.cc  BinOpCompare.cc  BinOpExpr.cc  Block.cc  BuildSettings.cc  Builder.cc  CMakeLists.txt  CastExpr.cc  ClassDecl.cc  ClassMethod.cc  CodeBase.cc  CodeLocation.cc  CondBlock.cc  Constructor.cc  CtorCall.cc  DerefExpr.cc  EnumStmt.cc  Error.cc  Expression.cc  ExpressionCall.cc  ExternFunction.cc  Function.cc  FunctionCall.cc  Genericable.cc  IDReference.cc  IfStmt.cc  IncrementExpr.cc  Library.cc  Loop.cc  LoopTerminator.cc  MainFunction.cc  MemberAccess.cc  MemberVarDecl.cc  (+32 more)
lib/liborange/: BuildCommand.cc  Builder.cc  CMakeLists.txt  RunCommand.cc  TestCommand.cc
lib/libparse/: CMakeLists.txt  Error.cc  char_types.cc  char_types.h  lex.cc  lex.h  lex_helpers.cc  lexer.cc  lexer.txt  parser.cc  parser.hh  stream_helpers.h
lib/libtranslate/: CMakeLists.txt
lib/parse/: CMakeLists.txt  README.md
lib/test/: CMakeLists.txt  README.md  Test.cc  TestLib.cc
lib/util/: CMakeLists.txt  assertions.cc  file.cc  link.cc  string.cc
test/: CMakeLists.txt  README  README.md  a.or  ambiguities.or  b.or  c.or  crash.or  helpers.h  inline.or  main.cc  nestedscope.or  oc_tester.cc  preprocess.or  scope.or  strings.or  test_lexer.cc  types.or  values.or
test/array/: array_access_nested.or  array_array_func_param.or  array_basic_creation.or  array_basic_morphing.or  array_expr_elements.or  array_generic_func_param.or  array_nested_creation.or  array_ptr_func_param.or  array_var_as_size.or  arrays_basic.or  arrays_const_assign.or  arrays_dyn_assign.or  arrays_explicit_nested.or  arrays_explicit_nested_ptr.or  arrays_explicit_nested_size.or  arrays_explicit_type.or  arrays_explicit_type_ptr.or  arrays_index_ptr.or  arrays_morphing.or  arrays_morphing_future.or  arrays_nested.or  arrays_nested_copy.or  arrays_var_as_idx.or  arrays_var_as_idx_nest.or  characters.or  copy.or
test/baselines/: LexOutput_01-empty.txt  LexOutput_02-return.txt  LexOutput_03-function.txt  LexOutput_04-implicit_variable.txt  LexOutput_05-function_vars.txt  LexOutput_06-math.txt  LexOutput_07-empty_function.txt  LexOutput_08-return_no_expr.txt  LexOutput_09-return_no_expr_global.txt  LexOutput_10-comments.txt  LexOutput_11-complex_math.txt  LexOutput_12-strings_global.txt  LexOutput_13-strings_function.txt  LexOutput_14-hexadecimal.txt  LexOutput_15-nested_functions.txt  LexOutput_16-empty_args.txt  LexOutput_17-implicit_vars_as_arg.txt  LexOutput_18-comparisons_lt.txt  LexOutput_19-comparisons_gt.txt  LexOutput_20-comparisons_lte.txt  LexOutput_21-comparisons_gte.txt  LexOutput_22-explicit_declaration.txt  LexOutput_23-explicit_declaration_assign.txt  LexOutput_24-return_extern_func.txt  LexOutput_25-return_extern_func_glob.txt  LexOutput_26-explicit_float.txt  LexOutput_27-explicit_float_cast.txt  LexOutput_28-explicit_float_comp.txt  LexOutput_29-float_arg.txt  LexOutput_30-implicit_float.txt  LexOutput_31-math_assign.txt  LexOutput_32-float_in_func.txt  LexOutput_33-c-printf-test.txt  LexOutput_34-downcasting.txt  LexOutput_35-pts-as-args.txt  LexOutput_36-implicit_function_args.txt  LexOutput_37-doubles.txt  LexOutput_38-arg_casting.txt  LexOutput_39-eq-operators.txt  LexOutput_40-sign_test_1.txt  (+41 more)
test/basic/: characters.or  comments.or  comparisons_gt.or  comparisons_gte.or  comparisons_lt.or  comparisons_lte.or  implicit_ret.or  increment_float.or  math.or  prefix_postfix_increments.or  ptrs_add.or  return_extern_func.or  void_return.or
test/bugs/: bug_01.or  bug_02.or  bug_03.or  bug_04.or  bug_05.or  bug_06.or  bug_07.or  bug_09.or  bug_10.or  bug_11.or  bug_12.or  bug_13.or  bug_15.or  bug_17.or  bug_18.or  bug_19.or  bug_20.or  bug_21.or  bug_22.or  bug_23.or  bug_24.or  bug_25.or  bug_26.or  bug_27.or  bug_28.or  bug_29.or  bug_30.or
test/builtin/: sizeof.or
test/empty/: comment.or  comments.or  comments_between_newlines.or  whitespace_file.or
test/enum/: enum_basic.or  enum_basic_cast.or  enum_basic_neg.or  enum_creation_no_use.or  enum_explicit_value.or  enum_flags.or  enum_mixed.or
test/files/: 03-function.or  04-implicit_variable.or  05-function_vars.or  08-return_no_expr.or  11-complex_math.or  12-strings_global.or  13-strings_function.or  15-nested_functions.or  16-empty_args.or  24-return_extern_func.or  25-return_extern_func_glob.or  26-explicit_float.or  27-explicit_float_cast.or  28-explicit_float_comp.or  29-float_arg.or  30-implicit_float.or  31-math_assign.or  32-float_in_func.or  33-c-printf-test.or  34-downcasting.or  36-implicit_function_args.or  37-doubles.or  38-arg_casting.or  39-eq-operators.or  41-multiple_assign.or  42-basic_if.or  43-elif.or  45-if_as_value.or  46-if_as_value_2.or  48-scoped_vars_if.or  49-if_as_val_explicit.or  51-alt_assign.or  53-fib.or  54-explicit_cast.or  55-fib.or  56-implicit_chain.or  (+33 more)
unit/: CMakeLists.txt  unit_cmd.cc  unit_grove.cc  unit_types.cc
(+803 files in other folders)
